@@ -12,8 +12,11 @@ BUG FIXES:
 	- Error handling for malformed IXFRs improved.
 	- Changed man pages format from mdoc to mansun, to support the Solaris OS. 
 	- Additional man pages fixes (syntax).
-        - Fixed start nsd while already running: do not initialize server, 
+        - Fixed nsdc start when nsd already running: do not initialize server, 
           since it is already running.
+	- Fixup bug where data related files are looked up in the wrong
+	  directory when chrooted with chrootdir ending with a slash.
+
 FEATURES:
         - Added "hide-version" configuration setting. Enabling this feature 
           stops NSD from answering to CHAOS class version requests.
